--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@
 
       <!-- actions -->
 
-      <script type="text/javascript" src="js/actions/actions.js"></script>
+      <script type="text/javascript" src="js/actions/generated-form-action.js"></script>
+      <script type="text/javascript" src="js/actions/button-bar-action.js"></script>
 
       <!-- end actions -->
 
       <script type="text/javascript" src="js/stores/form-store.js"></script>
+      <script type="text/javascript" src="js/stores/form-state-store.js"></script>
 
 	   <!-- components -->
 
@@ -82,8 +84,10 @@
       <script type="text/jsx" src="js/components/date-field.js"></script>
       <script type="text/jsx" src="js/components/text-field.js"></script>
       <script type="text/jsx" src="js/components/select-field.js"></script>
+      <script type="text/jsx" src="js/components/number-field.js"></script>
       <script type="text/jsx" src="js/components/radio-options-field.js"></script>
       <script type="text/jsx" src="js/components/alt-values-field.js"></script>
+      <script type="text/jsx" src="js/components/basic-fields.js"></script>
 
       <script type="text/jsx" src="js/components/button-bar.js"></script>
 
